# python-ovh

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.rst  LICENCE  LICENSE  MANIFEST.in  MIGRATION.rst  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: test.yaml
debian/: changelog  control  copyright  docs  rules
docs/: Makefile  conf.py  index.rst  make.bat
docs/api/ovh/: client.rst  config.rst  consumer_key.rst  exceptions.rst
examples/: README.md
examples/serviceExpiration/: api_get_service_that_expired_soon.md  serviceThatWillExpired.py
examples/serviceList/: api_get_service_list.md  serviceList.py
ovh/: __init__.py  client.py  config.py  consumer_key.py  exceptions.py  oauth2.py
rpmbuild/: python-ovh.spec
scripts/: build-debian-package-docker.sh  build-debian-package-recipe.sh  bump-version.sh  update-copyright.sh  update-requests.sh
tests/: __init__.py  test-client.py  test_client.py  test_config.py  test_consumer_key.py
tests/data/: invalid.ini  localPartial.ini  system.ini  user.ini  userPartial.ini  user_both.ini  user_oauth2.ini  user_oauth2_incompatible.ini  user_oauth2_invalid.ini
tests/fixtures/: custom_ovh.conf  etc_ovh.conf  home_ovh.conf  pwd_ovh.conf
