[metadata]
name = ovh
description = "Official OVH.com API wrapper"
long_description = file: README.rst
version = 0.6.0
author = OVHcloud team - Romain Beuque
author_email = api@ml.ovh.net
url = https://api.ovh.com
license = BSD
license_file = LICENSE
keywords = ovh, sdk, rest, ovhcloud
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
packages = find:
setup_requires =
    setuptools>=30.3.0
include_package_data = True

[options.package_data]
ovh.vendor.requests = *.pem

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    coverage==3.7.1
    mock==1.0.1
    nose==1.3.3
    yanc==0.2.4
    Sphinx==1.2.2
    coveralls==0.4.4
    setuptools>=30.3.0
    wheel
test =
    coverage==3.7.1
    mock==1.0.1
    nose==1.3.3
    yanc==0.2.4

[test]
test-suite = nose.collector

[nosetests]
verbosity = 2
where = tests/
with-yanc = 1
with-coverage = 1
cover-package = ovh
cover-erase = 1

[bdist_wheel]
universal = 1
