[metadata]
name = ovh
description = "Official module to perform HTTP requests to the OVHcloud APIs"
long_description = file: README.rst
version = 1.1.2
author = OVHcloud team - Romain Beuque
author_email = api@ml.ovh.net
url = https://api.ovh.com
license = BSD
license_file = LICENSE
project_urls =
    Changelog = https://github.com/ovh/python-ovh/blob/master/CHANGELOG.md
    Repository = https://github.com/ovh/python-ovh.git
    Issues = https://github.com/ovh/python-ovh/issues
keywords = ovh, sdk, rest, ovhcloud
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
packages = find:
setup_requires =
    setuptools>=30.3.0
# requests: we need ssl+pooling fix from https://docs.python-requests.org/en/latest/community/updates/#id40
install_requires =
    requests>=2.11.0
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    Sphinx==1.2.2
    black
    coverage~=7.2.2
    flake8
    isort
    pytest~=7.2.2
    pytest-cov==4.0.0
    setuptools>=30.3.0
    wheel

[bdist_wheel]
universal = 1
